KotlinParser.java
// Generated from KotlinParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KotlinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Escape=1, VAR=2, PACKAGE=3, IMPORT=4, RETURN=5, LOGICAL_OR=6, LOGICAL_AND=7, 
		GET=8, BIT_OR=9, BIT_AND=10, BIT_XOR=11, INOP=12, NOTIN=13, ISOP=14, NOTIS=15, 
		COLON=16, COMM=17, LPAR=18, RPAR=19, QUESTION=20, LCURL=21, RCURL=22, 
		EQ=23, PLUSEQ=24, MINUSEQ=25, MULTEQ=26, DIVEQ=27, QEQ=28, DO=29, DOT=30, 
		EQUAL_R=31, EQUAL=32, NOT_EQUAL=33, NOT_EQUAL_R=34, ARROW=35, DIV=36, 
		MUL=37, QUAT=38, RANGE_OP=39, WHEN=40, INC=41, DEC=42, FOR=43, WHILE=44, 
		IF=45, ELSE=46, ELSE_IF=47, GT=48, LT=49, GTE=50, LTE=51, SHIFT_R=52, 
		SHIFT_L=53, DOWN_TO=54, STEP=55, FUNC=56, LBRAC=57, RBRAC=58, ABSTRACT=59, 
		CLASS=60, INTERFACE=61, OVERRIDE=62, MINUS=63, PLUS=64, TYPE_INT=65, TYPE_STRING=66, 
		TYPE_FLOAT=67, TYPE_ANY=68, TYPE_Double=69, TYPE_Long=70, TYPE_SHORT=71, 
		TYPE_BYTE=72, TYPE_BOOLEAN=73, TYPE_UNIT=74, TYPE_CLASS=75, NL=76, INT=77, 
		BOOL=78, LONG=79, HEXA=80, BINARY=81, REAL=82, ID=83, WS=84, LQ=85, FieldID=86, 
		RQ=87, StrFieldReference=88, StrCommonText=89, StrEscape=90, StringExpStart=91, 
		StringExpression_WS=92, StringExpression_NL=93;
	public static final int
		RULE_prog = 0, RULE_chunk = 1, RULE_packages = 2, RULE_importing = 3, 
		RULE_packagelist = 4, RULE_parameter = 5, RULE_classDefine = 6, RULE_classbody = 7, 
		RULE_classblock = 8, RULE_classbodymembers = 9, RULE_getter = 10, RULE_typestrict = 11, 
		RULE_class_stmt = 12, RULE_extendlist = 13, RULE_variableDefine = 14, 
		RULE_functionDefine = 15, RULE_functionbody = 16, RULE_block = 17, RULE_multiple_stmt = 18, 
		RULE_stmt = 19, RULE_defining = 20, RULE_inblockExpression = 21, RULE_returning = 22, 
		RULE_expression = 23, RULE_assignstmt = 24, RULE_unaryexpression = 25, 
		RULE_commonstmt = 26, RULE_oroperation = 27, RULE_andoperation = 28, RULE_inclusiveoroperation = 29, 
		RULE_exclusiveoperation = 30, RULE_andExpr = 31, RULE_equalityExpr = 32, 
		RULE_comparableExpr = 33, RULE_inisOperation = 34, RULE_innotin = 35, 
		RULE_shiftExpr = 36, RULE_rangeExpr = 37, RULE_addExpr = 38, RULE_multiExpr = 39, 
		RULE_term = 40, RULE_prefixop = 41, RULE_postterm = 42, RULE_posttermwithoutincdec = 43, 
		RULE_dotoperation = 44, RULE_atomic = 45, RULE_postoperation = 46, RULE_digit = 47, 
		RULE_functioncall = 48, RULE_lambdaExpr = 49, RULE_functionname = 50, 
		RULE_inputparameter = 51, RULE_flowcontrol = 52, RULE_loopExp = 53, RULE_forExp = 54, 
		RULE_variableDeclare = 55, RULE_whileExp = 56, RULE_dowhileExp = 57, RULE_conditionalExp = 58, 
		RULE_ifExp = 59, RULE_ifstmt = 60, RULE_whenExp = 61, RULE_whenComponent = 62, 
		RULE_whenCondition = 63, RULE_rangeinWhen = 64, RULE_typeinWhen = 65, 
		RULE_type = 66, RULE_assignment = 67, RULE_string = 68, RULE_stringcomponent = 69, 
		RULE_stringContent = 70, RULE_stringExpression = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "chunk", "packages", "importing", "packagelist", "parameter", 
			"classDefine", "classbody", "classblock", "classbodymembers", "getter", 
			"typestrict", "class_stmt", "extendlist", "variableDefine", "functionDefine", 
			"functionbody", "block", "multiple_stmt", "stmt", "defining", "inblockExpression", 
			"returning", "expression", "assignstmt", "unaryexpression", "commonstmt", 
			"oroperation", "andoperation", "inclusiveoroperation", "exclusiveoperation", 
			"andExpr", "equalityExpr", "comparableExpr", "inisOperation", "innotin", 
			"shiftExpr", "rangeExpr", "addExpr", "multiExpr", "term", "prefixop", 
			"postterm", "posttermwithoutincdec", "dotoperation", "atomic", "postoperation", 
			"digit", "functioncall", "lambdaExpr", "functionname", "inputparameter", 
			"flowcontrol", "loopExp", "forExp", "variableDeclare", "whileExp", "dowhileExp", 
			"conditionalExp", "ifExp", "ifstmt", "whenExp", "whenComponent", "whenCondition", 
			"rangeinWhen", "typeinWhen", "type", "assignment", "string", "stringcomponent", 
			"stringContent", "stringExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'package'", "'import'", "'return'", "'||'", "'&&'", 
			"'get'", "'or'", "'and'", "'xor'", "'in'", "'!in'", "'is'", "'!is'", 
			"':'", "','", "'('", "')'", "'?'", "'{'", "'}'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'do'", "'.'", "'==='", "'=='", "'!='", "'!=='", 
			"'->'", "'/'", "'*'", "'%'", "'..'", "'when'", "'++'", "'--'", "'for'", 
			"'while'", "'if'", "'else'", "'else if'", "'>'", "'<'", "'>='", "'<='", 
			"'shr'", "'shl'", "'downTo'", "'step'", "'fun'", "'['", "']'", "'abstract'", 
			"'class'", "'interface'", "'override'", "'-'", "'+'", "'Int'", "'String'", 
			"'Float'", "'Any'", "'Double'", "'Long'", "'Short'", "'Byte'", "'Boolean'", 
			"'Unit'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Escape", "VAR", "PACKAGE", "IMPORT", "RETURN", "LOGICAL_OR", "LOGICAL_AND", 
			"GET", "BIT_OR", "BIT_AND", "BIT_XOR", "INOP", "NOTIN", "ISOP", "NOTIS", 
			"COLON", "COMM", "LPAR", "RPAR", "QUESTION", "LCURL", "RCURL", "EQ", 
			"PLUSEQ", "MINUSEQ", "MULTEQ", "DIVEQ", "QEQ", "DO", "DOT", "EQUAL_R", 
			"EQUAL", "NOT_EQUAL", "NOT_EQUAL_R", "ARROW", "DIV", "MUL", "QUAT", "RANGE_OP", 
			"WHEN", "INC", "DEC", "FOR", "WHILE", "IF", "ELSE", "ELSE_IF", "GT", 
			"LT", "GTE", "LTE", "SHIFT_R", "SHIFT_L", "DOWN_TO", "STEP", "FUNC", 
			"LBRAC", "RBRAC", "ABSTRACT", "CLASS", "INTERFACE", "OVERRIDE", "MINUS", 
			"PLUS", "TYPE_INT", "TYPE_STRING", "TYPE_FLOAT", "TYPE_ANY", "TYPE_Double", 
			"TYPE_Long", "TYPE_SHORT", "TYPE_BYTE", "TYPE_BOOLEAN", "TYPE_UNIT", 
			"TYPE_CLASS", "NL", "INT", "BOOL", "LONG", "HEXA", "BINARY", "REAL", 
			"ID", "WS", "LQ", "FieldID", "RQ", "StrFieldReference", "StrCommonText", 
			"StrEscape", "StringExpStart", "StringExpression_WS", "StringExpression_NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KotlinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KotlinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<ChunkContext> chunk() {
			return getRuleContexts(ChunkContext.class);
		}
		public ChunkContext chunk(int i) {
			return getRuleContext(ChunkContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(KotlinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(KotlinParser.NL, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(144);
				match(NL);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			chunk();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(152); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(151);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(154); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PACKAGE) | (1L << IMPORT) | (1L << LPAR) | (1L << DO) | (1L << WHEN) | (1L << INC) | (1L << DEC) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << FUNC) | (1L << ABSTRACT) | (1L << CLASS) | (1L << INTERFACE) | (1L << MINUS))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (PLUS - 64)) | (1L << (TYPE_INT - 64)) | (1L << (TYPE_STRING - 64)) | (1L << (TYPE_FLOAT - 64)) | (1L << (TYPE_ANY - 64)) | (1L << (TYPE_Double - 64)) | (1L << (TYPE_Long - 64)) | (1L << (TYPE_SHORT - 64)) | (1L << (TYPE_BYTE - 64)) | (1L << (TYPE_BOOLEAN - 64)) | (1L << (TYPE_UNIT - 64)) | (1L << (TYPE_CLASS - 64)) | (1L << (INT - 64)) | (1L << (BOOL - 64)) | (1L << (LONG - 64)) | (1L << (HEXA - 64)) | (1L << (BINARY - 64)) | (1L << (REAL - 64)) | (1L << (ID - 64)) | (1L << (LQ - 64)))) != 0)) {
					{
					setState(156);
					chunk();
					}
				}

				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChunkContext extends ParserRuleContext {
		public FunctionDefineContext functionDefine() {
			return getRuleContext(FunctionDefineContext.class,0);
		}
		public ClassDefineContext classDefine() {
			return getRuleContext(ClassDefineContext.class,0);
		}
		public VariableDefineContext variableDefine() {
			return getRuleContext(VariableDefineContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PackagesContext packages() {
			return getRuleContext(PackagesContext.class,0);
		}
		public ImportingContext importing() {
			return getRuleContext(ImportingContext.class,0);
		}
		public FlowcontrolContext flowcontrol() {
			return getRuleContext(FlowcontrolContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_chunk);
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				functionDefine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				classDefine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				variableDefine();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				expression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(168);
				packages();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(169);
				importing();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(170);
				flowcontrol();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackagesContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KotlinParser.PACKAGE, 0); }
		public PackagelistContext packagelist() {
			return getRuleContext(PackagelistContext.class,0);
		}
		public PackagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterPackages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitPackages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitPackages(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackagesContext packages() throws RecognitionException {
		PackagesContext _localctx = new PackagesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packages);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(PACKAGE);
			setState(174);
			packagelist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportingContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(KotlinParser.IMPORT, 0); }
		public PackagelistContext packagelist() {
			return getRuleContext(PackagelistContext.class,0);
		}
		public ImportingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterImporting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitImporting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitImporting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportingContext importing() throws RecognitionException {
		ImportingContext _localctx = new ImportingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(IMPORT);
			setState(177);
			packagelist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackagelistContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(KotlinParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(KotlinParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(KotlinParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(KotlinParser.DOT, i);
		}
		public TerminalNode MUL() { return getToken(KotlinParser.MUL, 0); }
		public PackagelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packagelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterPackagelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitPackagelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitPackagelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackagelistContext packagelist() throws RecognitionException {
		PackagelistContext _localctx = new PackagelistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_packagelist);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(ID);
			setState(184);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(180);
					match(DOT);
					setState(181);
					match(ID);
					}
					} 
				}
				setState(186);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(187);
				match(DOT);
				setState(188);
				match(MUL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KotlinParser.ID, 0); }
		public TerminalNode COLON() { return getToken(KotlinParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(ID);
			setState(192);
			match(COLON);
			setState(193);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefineContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KotlinParser.ID, 0); }
		public TerminalNode CLASS() { return getToken(KotlinParser.CLASS, 0); }
		public TerminalNode INTERFACE() { return getToken(KotlinParser.INTERFACE, 0); }
		public TerminalNode ABSTRACT() { return getToken(KotlinParser.ABSTRACT, 0); }
		public List<TerminalNode> NL() { return getTokens(KotlinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(KotlinParser.NL, i);
		}
		public TerminalNode LPAR() { return getToken(KotlinParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(KotlinParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(KotlinParser.COLON, 0); }
		public List<ExtendlistContext> extendlist() {
			return getRuleContexts(ExtendlistContext.class);
		}
		public ExtendlistContext extendlist(int i) {
			return getRuleContext(ExtendlistContext.class,i);
		}
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public List<TerminalNode> COMM() { return getTokens(KotlinParser.COMM); }
		public TerminalNode COMM(int i) {
			return getToken(KotlinParser.COMM, i);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<VariableDefineContext> variableDefine() {
			return getRuleContexts(VariableDefineContext.class);
		}
		public VariableDefineContext variableDefine(int i) {
			return getRuleContext(VariableDefineContext.class,i);
		}
		public TerminalNode VAR() { return getToken(KotlinParser.VAR, 0); }
		public ClassDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).enterClassDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KotlinParserListener ) ((KotlinParserListener)listener).exitClassDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitClassDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefineContext classDefine() throws RecognitionException {
		ClassDefineContext _localctx = new ClassDefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classDefine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ABSTRACT) {
				{
				setState(195);
				match(ABSTRACT);
				}
			}
